<resources>
    <string name="app_name">Online fleet</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="shift">Shift</string>
    <string name="close_shift">Close shift</string>
    <string name="open_shift">Open shift</string>
    <string name="error">Error</string>
    <string name="error_car">Check vehicle status</string>
    <string name="profile">Profile</string>
    <string name="car_actions">Actions with car</string>
    <string name="schedule">Schedule</string>
    <string name="check_login_and_pass">Please check your login and password.</string>
    <string name="error_load_data">Error loading data</string>
    <string name="scan_error">Error scanning</string>
    <string name="close_contract">This contract is already closed</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="check_internet_connection">Please check the internet connection.</string>
    <string name="need_access_location">For the working with shifts needs access to location.</string>
    <string name="cant_get_location">Can\'t get your location</string>
    <string name="your_session_is_closed">Your session is closed.</string>
    <string name="search_station_hint">Station/city/short code</string>
    <string name="station">Station</string>
    <string name="cant_get_station">Can\'t get station</string>
    <string name="auto">Auto</string>
    <string name="qr_code">QR code</string>
    <string name="employee">Employee</string>
    <string name="choose_station">Choose station</string>
    <string name="for_search_car_hint">For search car enter minimum 3 symbols.</string>
    <string name="license_plate">License plate</string>
    <string name="no_opened_shift">Your shift is not open</string>
    <string name="search_for_shift">Search for shift…</string>
    <string name="shift_was_open">Shift was open <b>%s</b></string>
    <string name="car_no_found">Car no found.</string>
    <string name="mileage">Mileage</string>
    <string name="kilometers">%d km</string>
    <string name="on_km">on %d km</string>
    <string name="last_TO">Last PTI</string>
    <string name="owner">Owner</string>
    <string name="insurance">Insurance</string>
    <string name="state">State</string>
    <string name="unknown">Unknown</string>
    <string name="leased_now">Leased now</string>
    <string name="on_parking">On a parking</string>
    <string name="decommissioned">Decommissioned</string>
    <string name="in_relocation">In relocation</string>
    <string name="delivery_to_client">Delivery to client</string>
    <string name="client">Client: </string>
    <string name="on_maintenance">On maintenance</string>
    <string name="sold">Sold</string>
    <string name="clean">Clean</string>
    <string name="dirty">Dirty</string>
    <string name="until_to">until %s</string>
    <string name="no">No</string>
    <string name="show_more">Show more</string>
    <string name="hide">Hide</string>
    <string name="search_car">Search car</string>
    <string name="qr_code_scan">Scanning QR codes</string>
    <string name="select_station">Select station</string>
    <string name="current_status">Current status</string>
    <string name="this_is_your_rating">This is your rating</string>
    <string name="some_time">some time</string>
    <string name="shift_open_time_ago">Shift was open <b>%s</b></string>
    <string name="time_ago">more than %s ago</string>
    <plurals name="minutes">
    <item quantity="one">%d minute</item>
    <item quantity="two">%d minutes</item>
    <item quantity="few">%d minutes</item>
    <item quantity="many">%d minutes</item>
    <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="two">%d hours</item>
        <item quantity="few">%d hours</item>
        <item quantity="many">%d hours</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="two">%d days</item>
        <item quantity="few">%d days</item>
        <item quantity="many">%d days</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%d month</item>
        <item quantity="two">%d months</item>
        <item quantity="few">%d months</item>
        <item quantity="many">%d months</item>
        <item quantity="other">%d months</item>
    </plurals>
    <string name="pick_up_car">Pick up car</string>
    <string name="drop_off_car">Drop off car</string>
    <string name="just_now">just now</string>
    <string name="pick_up">Pick up</string>
    <string name="drop_off">Drop off</string>
    <string name="decommissioning">Decommissioning</string>
    <string name="commissioning">Commissioning</string>
    <string name="start_relocation">Start relocation</string>
    <string name="end_relocation">End relocation</string>
    <string name="delivery">Delivery</string>
    <string name="start_maintenance">Start maintenance</string>
    <string name="end_maintenance">End maintenance</string>
    <string name="change_tires">Change tires</string>
    <string name="refill_fuel">Refill fuel</string>
    <string name="washing">Washing</string>
    <string name="available_actions">Available actions</string>
    <string name="last_actions">Last actions</string>
    <string name="summer_tires">Summer tires</string>
    <string name="type">Type</string>
    <string name="winter_studded_tires">Winter studded tires</string>
    <string name="winter_studless_tires">Winter studless tires</string>
    <string name="condition">Condition</string>
    <string name="condition_new">New</string>
    <string name="good">Good</string>
    <string name="for_one_season">For one season</string>
    <string name="options">Options</string>
    <string name="tire_change_information_sent">Tire change information sent.</string>
    <string name="price">Price</string>
    <string name="comment">Comment</string>
    <string name="start_relocation_information_sent">Stert relocation information sent.</string>
    <string name="need_complete_opened_relocations">You have open relocations, you need complete them first.</string>
    <string name="litres_amount">Litres amount</string>
    <string name="maintenance_days_amount">Approximate days amount</string>
    <string name="refueling_information_sent">Refueling  information sent.</string>
    <string name="reservation_number">Reservation number</string>
    <string name="reservation_number2">Reservation number: </string>
    <string name="wrong_car_for_reservation">For this reservation assigned another car.</string>
    <string name="not_allowed_for_this_shift">Your shift open on another station.\nYou can\\\'t serve this reservation.</string>
    <string name="car_issued">Car issued</string>
    <string name="reservation_not_found">The reservation not found</string>
    <string name="select_reservation">Select reservation</string>
    <string name="select_car_wash">Select carwash</string>
    <string name="sending_data">Sending data…</string>
    <string name="done">Done</string>
    <string name="car_delivery_information_sent">Car delivery information sent.</string>
    <string name="car_wash_information_sent">Car wash information sent.</string>
    <string name="incorrect_milage_contact_regional_manager">Incorrect mileage./nReview mileage or contact your regional manager.</string>
    <string name="checking_relocations">Checking relocations…</string>
    <string name="you_dont_have_open_relocations">You don\'t have open relocations.</string>
    <string name="your_open_relocations">Your open relocations</string>
    <string name="relocations">Relocations</string>
    <string name="tap_to_scan">Tap to scan</string>
    <string name="sure_data">Please check your details carefully before continuing.</string>
    <string name="monitoring">Monitoring</string>
    <string name="min" translatable="false">min</string>
    <string name="max" translatable="false">max</string>
    <string name="fuel_amount">Fuel amount</string>
    <string name="car_state">Car state</string>
    <string name="end_relocation_information_sent">End relocation information sent.</string>
    <string name="scan_code">Scan code</string>
    <string name="scan_qr_code_res_number">Scan QR code on the contract</string>
    <string name="enter_res_number_fully">Enter the reservation or contract number fully</string>
    <string name="confirm_shift_ending">Do you want to end your shift?</string>
    <string name="need_camera_access">For scan QR code need access to the camera.</string>
    <string name="cant_recognize_car_number">Can\'t recognize vehicle number.</string>
    <string name="cant_recognize_qr_code">Can\'t recognize QR code.</string>
    <string name="scan_car_qr_code">Scan vehicle or contract QR code</string>
    <string name="tab_to_scan_car_qr_code">Click to start scanning vehicle or contract QR code</string>
    <string name="cant_recognize_contract_number">Can\'t recognize contract number.</string>
    <string name="commissioning_information_sent">Commissioning information send</string>
    <string name="decommissioning_information_sent">Decommissioning information send</string>
    <string name="add_new_car">Add new car</string>
    <string name="take_photo_act_of_handover"><b>Take a photo</b> of the Act of Handover</string>
    <string name="tap_to_open_camera">Tap to open camera</string>
    <string name="loaded_photo">Loaded photo</string>
    <string name="aprok_conract_number">Aprok contract number</string>
    <string name="contract_number">Contract number: </string>
    <string name="optional_equipment">Optional equipment</string>
    <string name="gps_navigator">GPS navigator</string>
    <string name="child_seat">Child seat</string>
    <string name="select_to_add_equipment">To add, select the equipment</string>
    <string name="optional_equipment_not_selected">Optional equipment is not selected.</string>
    <string name="add_equipment">Add equipment</string>
    <string name="number_equipment">Number equpment</string>
    <string name="no_equipment_with_this_number">Equipment with this number was not found</string>
    <string name="do_you_want_delete_str">Do you want delete %s?</string>
    <string name="selected_optional_equipment">Selected optional equipment</string>
    <string name="this_equipment_already_added">This equipment has already been added.</string>
    <string name="for_remove_tap_on_equipment">To remove, click on the required equipment.</string>
    <string name="schedule_is_empty">Schedule is empty.</string>
    <string name="reservation">Reservation</string>
    <string name="car">Car</string>
    <string name="not_assigned">Not assigned</string>
    <string name="pickup_information_sent">Pick up information sent.</string>
    <string name="invoice_number">Invoice number</string>
    <string name="end_maintenance_information_sent">End maintenance information sent.</string>
    <string name="excess_mileage">Excess mileage</string>
    <string name="not_enough_fuel">Not enough fuel</string>
    <string name="need_a_carwash">Need a carwash</string>
    <string name="remember_to_charge_extra">Remember to charge extra.</string>
    <string name="cost_of_fines">Cost of fines</string>
    <string name="car_model">Model: </string>
    <string name="car_number">Number: </string>
    <string name="yes">Yes</string>
    <string name="drop_off_place">Drop off place</string>
    <string name="drop_off_on_station">Drop off on station</string>
    <string name="drop_off_on_address">Drop off on address</string>
    <string name="checking_instaled_tires">Checking installed tires</string>
</resources>