<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_drop_off_place_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/gapLarge"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/drop_off_place"
        android:textColor="?attr/text_extra_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/gapHalfLarge"
        app:layout_constraintTop_toBottomOf="@id/tv_drop_off_place_title">

        <RadioButton
            android:id="@+id/rbtn_on_station"
            android:text="@string/drop_off_on_station"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/rbtn_on_address"
            android:text="@string/drop_off_on_address"
            style="@style/RadioButton" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        style="@style/GreenButtonMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/gapXLarge"
        android:enabled="false"
        android:text="@string/next" />

</androidx.constraintlayout.widget.ConstraintLayout>