<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/gapMedium"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/error"
        android:textSize="15sp"
        android:layout_marginBottom="@dimen/gapHalfLarge"
        android:layout_marginTop="@dimen/gapHalfLarge"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        app:layout_constraintTop_toBottomOf="@id/tv_message"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/GreenButtonFullScreen"
        android:layout_width="0dp"
        android:textSize="15sp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
        android:layout_marginEnd="@dimen/gapLarge"
        android:layout_marginTop="@dimen/gapLarge"
        android:text="@string/ok" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        style="@style/GreenButtonFullScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_ok"
        app:layout_constraintBottom_toBottomOf="@id/btn_ok"
        app:layout_constraintStart_toEndOf="@id/btn_ok"
        android:layout_width="0dp"
        android:textSize="15sp"
        android:layout_height="45dp"
        android:text="@string/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>